--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
         strategy:
             matrix:
                 go-version: [ 1.16.x, 1.15.x, 1.14.x, 1.13.x ]
-                platform: [ ubuntu-latest, macos-latest, windows-latest ]
+                platform: [ ubuntu-latest ]
         runs-on: ${{ matrix.platform }}
         steps:
             -   name: Install Go
@@ -13,6 +13,8 @@ jobs:
                 uses: actions/setup-go@v1
                 with:
                     go-version: ${{ matrix.go-version }}
+            -   name: Install libusb-1.0-0-dev
+                run: sudo apt-get install libusb-1.0-0-dev
             -   name: Checkout code
                 uses: actions/checkout@v1
             -   name: Run tests
