--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         strategy:
             matrix:
                 go-version: [ 1.16.x, 1.15.x, 1.14.x, 1.13.x ]
-                platform: [ ubuntu-latest, macos-latest, windows-latest ]
+                platform: [ ubuntu-latest ]
         runs-on: ${{ matrix.platform }}
         steps:
             -   name: Install Go
@@ -23,6 +23,8 @@ jobs:
                     go-version: ${{ matrix.go-version }}
             -   name: Checkout code
                 uses: actions/checkout@v1
+            -   name: Install libusb-1.0-0-dev
+                run: sudo apt-get install libusb-1.0-0-dev    
             -   name: Run tests
                 run: go test -v -race ./...
     codecov:
@@ -36,6 +38,8 @@ jobs:
                     go-version: 1.16.x
             -   name: Checkout code
                 uses: actions/checkout@v1
+            -   name: Install libusb-1.0-0-dev
+                run: sudo apt-get install libusb-1.0-0-dev
             -   name: Run tests
                 run: go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
             -   name: CodeCov
