--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,15 +21,38 @@ jobs:
                 uses: actions/setup-go@v1
                 with:
                     go-version: ${{ matrix.go-version }}
+            -   name: Install libusb-1.0-0-dev
+                run: sudo apt-get install libusb-1.0-0-dev
             -   name: Checkout code
                 uses: actions/checkout@v1
-            -   name: Install libusb-1.0-0-dev
-                run: sudo apt-get install libusb-1.0-0-dev    
             -   name: Run tests
-                run: go test -v -race ./...
+                run: go test -v -race
+
+
+    analyze:
+        name: Analyze
+        runs-on: ubuntu-latest     
+        permissions:
+            actions: read
+            contents: read
+            security-events: write
+        steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
+        - name: Install libusb-1.0-0-dev
+          run: sudo apt-get install libusb-1.0-0-dev
+        - name: Initialize CodeQL
+          uses: github/codeql-action/init@v1
+          with:
+            languages: go
+        - name: Autobuild
+          uses: github/codeql-action/autobuild@v1
+        - name: Perform CodeQL Analysis
+          uses: github/codeql-action/analyze@v1
+
     codecov:
         runs-on: ubuntu-latest
-        needs: test
+        needs: [ test, analyze ]
         steps:
             -   name: Install Go
                 if: success()
@@ -41,13 +64,14 @@ jobs:
             -   name: Install libusb-1.0-0-dev
                 run: sudo apt-get install libusb-1.0-0-dev
             -   name: Run tests
-                run: go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
+                run: go mod tidy && go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
             -   name: CodeCov
                 uses: codecov/codecov-action@v2
+
     lint:
         name: Lint project using GolangCI Lint
         runs-on: ubuntu-latest
-        needs: test
+        needs: [ test, analyze ]
         steps:
             -   name: Check out code into the Go module directory
                 uses: actions/checkout@v1
@@ -57,6 +81,7 @@ jobs:
                     version: latest
                     only-new-issues: true
                     args: --issues-exit-code=0
+
     goreadme:
         runs-on: ubuntu-latest
         needs: [codecov, lint]
@@ -69,5 +94,20 @@ jobs:
             badge-codecov: 'true'
             badge-godoc: 'true'
             email: 'justin@dynam.ac'
-            title: 'Go-DCDCUSB'
+            title: 'Go-LogAdapter'
+            # Optional: Token allows goreadme to comment the PR with diff preview.
             github-token: '${{ secrets.GITHUB_TOKEN }}'
+            
+    release:
+        #if: startsWith(github.ref, 'refs/tags/')
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        needs: [goreadme]
+        runs-on: ubuntu-latest
+        steps:
+        - name: Check out repository
+          uses: actions/checkout@v2
+        - uses: release-drafter/release-drafter@master
+          with: 
+            prerelease: ${{ contains(github.ref, '-rc') || contains(github.ref, '-b') || contains(github.ref, '-a') }}
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
