--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     test:
         strategy:
             matrix:
-                go-version: [ 1.16.x, 1.15.x, 1.14.x, 1.13.x ]
+                go-version: [ 1.17.x, 1.16.x, 1.15.x ]
                 platform: [ ubuntu-latest ]
         runs-on: ${{ matrix.platform }}
         steps:
@@ -58,7 +58,7 @@ jobs:
                 if: success()
                 uses: actions/setup-go@v1
                 with:
-                    go-version: 1.16.x
+                    go-version: 1.17.x
             -   name: Checkout code
                 uses: actions/checkout@v1
             -   name: Install libusb-1.0-0-dev
